# iron-mask-proxy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  verify.sh
.github/workflows/: docker-publish.yml
benches/: masking_bench.rs
examples/: 01_simple_log.json  02_nested_log.json  03_mixed_text.json  04_exclusion_test.json  05_credit_card_test.json
src/: config.rs  handlers.rs  lib.rs  main.rs  masker.rs  validator.rs
tests/: stream_integration_test.rs
